# django-require-migration-name

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
django-require-migration-name/management/commands/: makemigrations.py
tests/: settings.py  test_makemigrations.py  urls.py
