[tool.poetry]
authors = ["Wu Haotian <whtsky@gmail.com>"]
description = "require `name` in Django's `makemigrations`"
license = "MIT"
name = "django-require-migration-name"
readme = "README.md"
version = "0.2.0"

keywords = [
  "django",
  "django-migrations",
  "migrations",
]
repository = "https://github.com/whtsky/django-require-migration-name"

classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
]

[tool.poetry.dependencies]
Django = "^2.2 || ^3.0"
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3.1"
isort = "^5.7.0"
tox = "^3.21.0"
tox-gh-actions = "^2.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
